--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-This site documents places in and around Paris where Jewish children deported by the Nazis went to school. It also document related sites. 
+This site documents places in and around Paris where Jewish children deported by the Nazis went to school. It also documents related sites. 
