--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-This site documents places in and around Paris where Jewish children deported by the Nazis went to school. It also documents related sites. 
+This site documents places in and around Paris where Jewish children deported by the Nazis, and the complicit Vichy regime, went to school. It also documents related commerative sites. 
+
+2nd Arrondisement 
+<a href="beauregard.html">Ecole 5 Rue Beauregard</a> 
+<a href="marcel.html">Ecole 20 Rue Etienne Marcel</a> 
+<a href="doussoubs">Ecole 42 et 44 Rue Dussoubs</a> 
+
+Other sites
+<a href="barbe.html">La Pension Barbe></a> 
