--- a/marcel.html
+++ b/marcel.html
@@ -1,2 +1,2 @@
 
-<img src="20etienne.jpg" alt="20 Rue Etienne Marcel">
+<img src="20etienne.jpg" alt="20 Rue Etienne Marcel" width="500" height="333">
