--- a/marcel.html
+++ b/marcel.html
@@ -1,2 +1,8 @@
 
+<html>
+  <head>
+    <title>20 Rue Etienne Marcel</title>
+    <body>
 <img src="20etienne.jpg" alt="20 Rue Etienne Marcel" width="500" height="333">
+    </body>
+      </html>
