--- a/marcel.html
+++ b/marcel.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>20 Rue Etienne Marcel</title>
+  </head> 
     <body>
 <img src="20etienne.jpg" alt="20 Rue Etienne Marcel" width="500" height="333">
     </body>
