--- a/dussoubs.html
+++ b/dussoubs.html
@@ -4,6 +4,6 @@
     <title>42 et 44 Rue Dussoubs</title>
   </head> 
     <body>
-<img src="dussoubs.jpg" alt="42 et 44 Rue Dussoubs" width="500" height="333">
+<img src="ruedessoubs.jpg" alt="42 et 44 Rue Dussoubs" width="500" height="333">
     </body>
       </html>
