--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ This site documents places in and around Paris where Jewish children deported by
 2nd Arrondisement 
 <a href="beauregard.html">Ecole 5 Rue Beauregard</a> 
 <a href="marcel.html">Ecole 20 Rue Etienne Marcel</a> 
-<a href="doussoubs">Ecole 42 et 44 Rue Dussoubs</a> 
+<a href="dussoubs.html">Ecole 42 et 44 Rue Dussoubs</a> 
 
 Other sites
 <a href="barbe.html">La Pension Barbe></a> 
