--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
 This site documents places in and around Paris where Jewish children deported by the Nazis, and the complicit Vichy regime, went to school. It also documents related commerative sites. 
 
 2nd Arrondisement 
@@ -7,3 +12,6 @@ This site documents places in and around Paris where Jewish children deported by
 
 Other sites
 <a href="barbe.html">La Pension Barbe></a> 
+
+  </body>
+</html>
