--- a/beauregard.html
+++ b/beauregard.html
@@ -1,1 +1,9 @@
 
+<html>
+<head>
+  <title> 5 Rue de Beauregard </title>
+  </head>
+  <body>
+<img src="3beauregard1.jpg" alt="5 Rue de Beauregard" width=500 height=333>
+  </body>
+</html>
