--- a/beauregard.html
+++ b/beauregard.html
@@ -5,5 +5,9 @@
   </head>
   <body>
 <img src="3beauregard1.jpg" alt="5 Rue de Beauregard" width=500 height=333>
+    <p>
+    <img src="beauregard.jpg" alt="5 Rue de Beauregard" width=500 height=333>
+      <p>
+        
   </body>
 </html>
