--- a/dussoubs.html
+++ b/dussoubs.html
@@ -5,5 +5,9 @@
   </head> 
     <body>
 <img src="ruedessoubs.jpg" alt="42 et 44 Rue Dussoubs" width="500" height="333">
+      <p>
+        <img src="2nd.jpg" alt="42 et 44 Rue Dussoubs" width="500" height="333">
+        <p>
+          <img src="2nd2.jpg" alt="42 et 44 Rue Dussoubs" width="500" height="333">
     </body>
       </html>
