--- a/barbe.html
+++ b/barbe.html
@@ -1,1 +1,12 @@
 
+<html>
+  <head>
+    <title>42 et 44 Rue Dussoubs</title>
+  </head> 
+    <body>
+<img src="plaque1.jpg" alt="42 et 44 Rue Dussoubs" width="500" height="333">
+      <p>
+        <img src="ArtsAtelier" alt="42 et 44 Rue Dussoubs" width="500" height="333">
+        <p>
+    </body>
+      </html>
