--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
   </head>
   <body>
 This site documents places in and around Paris where Jewish children deported by the Nazis, and the complicit Vichy regime, went to school. It also documents related commerative sites. 
-
+<p>
 2nd Arrondisement 
-<a href="beauregard.html">Ecole 5 Rue Beauregard</a> 
-<a href="marcel.html">Ecole 20 Rue Etienne Marcel</a> 
-<a href="dussoubs.html">Ecole 42 et 44 Rue Dussoubs</a> 
-
+<p>
+  <a href="beauregard.html">Ecole 5 Rue Beauregard</a> 
+<p>
+  <a href="marcel.html">Ecole 20 Rue Etienne Marcel</a> 
+<p>
+  <a href="dussoubs.html">Ecole 42 et 44 Rue Dussoubs</a> 
+<p>
 Other sites
-<a href="barbe.html">La Pension Barbe></a> 
+  <p>
+<a href="barbe.html">La Pension Barbe</a> 
 
   </body>
 </html>
